<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>online-fundraising-donation-system-project</artifactId>
        <groupId>online-fundraising-donation-system</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>online-fundraising-donation-system-ejb</artifactId>
    <packaging>ejb</packaging>

    <properties>
        <!-- Version of WildFly containers to use and download -->
        <version.wildfly10-0>10.1.0.Final</version.wildfly10-0>
        <!-- WildFly Home -->
        <wildfly10-0Home>${project.build.directory}/wildfly-${version.wildfly10-0}</wildfly10-0Home>
        <!-- Arquillian versions to use and download -->
        <arquillian.bom.version>1.1.11.Final</arquillian.bom.version>
        <arquillian.wildfly.container.managed>1.1.0.Final</arquillian.wildfly.container.managed>
        <!-- Shrinkwrap versions -->
        <shrinkwrap.descriptors.version>2.0.0-alpha-10</shrinkwrap.descriptors.version>
        <!-- Following will be set as system properties -->
        <statelessViews>false</statelessViews>
        <jboss.socket.binding.port.offset>150</jboss.socket.binding.port.offset>
        <jboss.management.native.port>9090</jboss.management.native.port>
        <jvm.args.ip.version>-Djava.net.preferIPv4Stack=true -Djava.net.preferIPv6Addresses=true</jvm.args.ip.version>
        <arquillian.container.all.jvm.args>-Xms1024m -Xmx1024m -XX:MaxPermSize=512m -DstatelessViews=${statelessViews}
        </arquillian.container.all.jvm.args>
        <arquillian.container.all.jvm.args.withIPversion>${arquillian.container.all.jvm.args} ${jvm.args.ip.version}
        </arquillian.container.all.jvm.args.withIPversion>
        <arquillian.container.wildfly.10.1.0.Final.node0>127.0.0.1</arquillian.container.wildfly.10.1.0.Final.node0>
        <arquillian.container.jbossas.9.0.1.Final.jvm.args>${arquillian.container.all.jvm.args.withIPversion}
            -Djboss.bind.address=${arquillian.container.wildfly.10.1.0.Final.node0}
            -Djboss.bind.address.management=${arquillian.container.wildfly.10.1.0.Final.node0}
            -Djboss.bind.address.unsecure=${arquillian.container.wildfly.10.1.0.Final.node0}
            -Xmx2048m
            -XX:MaxPermSize=2048m
            -Xnoagent
            -Djava.compiler=NONE
            -Xdebug
            -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005
        </arquillian.container.jbossas.9.0.1.Final.jvm.args>
        <!-- ORM and DB versions -->
        <hibernate-core-version>5.2.4.Final</hibernate-core-version>
        <postgresql-jdbc-driver-version>9.4-1200-jdbc41</postgresql-jdbc-driver-version>
        <!-- Enable WS on EAP -->
        <eap.ws.enabled>true</eap.ws.enabled>
        <javaee.api.version>7.0</javaee.api.version>
        <javax.activation.version>1.1.1</javax.activation.version>
        <jboss.annotations.api.1.2.spec.version>1.0.0.Final</jboss.annotations.api.1.2.spec.version>
        <jboss.ejb.api.3.2.spec.version>1.0.0.Final</jboss.ejb.api.3.2.spec.version>
        <cdi.api.version>2.0-EDR2</cdi.api.version>
        <validation.api.version>1.1.0.Final</validation.api.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jboss.arquillian</groupId>
                <artifactId>arquillian-bom</artifactId>
                <version>${arquillian.bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>

        <!--PostgreSQL JDBC Driver-->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgresql-jdbc-driver-version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <version>${javaee.api.version}</version>
            <scope>provided</scope>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>online-fundraising-donation-system</groupId>
            <artifactId>online-fundraising-donation-system-entity</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>javax.activation</groupId>
            <artifactId>activation</artifactId>
            <version>${javax.activation.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.spec.javax.annotation</groupId>
            <artifactId>jboss-annotations-api_1.2_spec</artifactId>
            <version>${jboss.annotations.api.1.2.spec.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.spec.javax.ejb</groupId>
            <artifactId>jboss-ejb-api_3.2_spec</artifactId>
            <version>${jboss.ejb.api.3.2.spec.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.enterprise</groupId>
            <artifactId>cdi-api</artifactId>
            <version>${cdi.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>${validation.api.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.shrinkwrap.descriptors</groupId>
            <artifactId>shrinkwrap-descriptors-api-jboss</artifactId>
            <version>${shrinkwrap.descriptors.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.descriptors</groupId>
            <artifactId>shrinkwrap-descriptors-impl-jboss</artifactId>
            <version>${shrinkwrap.descriptors.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.descriptors</groupId>
            <artifactId>shrinkwrap-descriptors-api-javaee</artifactId>
            <version>${shrinkwrap.descriptors.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.descriptors</groupId>
            <artifactId>shrinkwrap-descriptors-impl-javaee</artifactId>
            <version>${shrinkwrap.descriptors.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.descriptors</groupId>
            <artifactId>shrinkwrap-descriptors-api-base</artifactId>
            <version>${shrinkwrap.descriptors.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.descriptors</groupId>
            <artifactId>shrinkwrap-descriptors-impl-base</artifactId>
            <version>${shrinkwrap.descriptors.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.descriptors</groupId>
            <artifactId>shrinkwrap-descriptors-gen</artifactId>
            <version>${shrinkwrap.descriptors.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.descriptors</groupId>
            <artifactId>shrinkwrap-descriptors-spi</artifactId>
            <version>${shrinkwrap.descriptors.version}</version>
        </dependency>

        <!--Test dependencies-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <version>1.1.11.Final</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.arquillian.extension</groupId>
            <artifactId>arquillian-persistence-api</artifactId>
            <version>1.0.0.Alpha7</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.extension</groupId>
            <artifactId>arquillian-persistence-impl</artifactId>
            <version>1.0.0.Alpha6</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>

        <!-- Orika Mapper -->
        <dependency>
            <groupId>ma.glasnost.orika</groupId>
            <artifactId>orika-core</artifactId>
            <version>1.4.6</version>
        </dependency>
        <dependency>
            <groupId>com.thoughtworks.paranamer</groupId>
            <artifactId>paranamer</artifactId>
            <version>2.7</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
            <artifactId>concurrentlinkedhashmap-lru</artifactId>
            <version>1.4.2</version>
        </dependency>
        <dependency>
            <groupId>javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.12.1.GA</version>
        </dependency>

    </dependencies>
    <profiles>
        <profile>
            <id>arquillian-wildfly-managed</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <serverProfile>standalone.xml</serverProfile>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>org.wildfly.arquillian</groupId>
                    <artifactId>wildfly-arquillian-container-managed</artifactId>
                    <version>${arquillian.wildfly.container.managed}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.jboss.arquillian.protocol</groupId>
                    <artifactId>arquillian-protocol-servlet</artifactId>
                    <scope>test</scope>
                </dependency>
            </dependencies>
            <build>
                <testResources>
                    <testResource>
                        <directory>src/test/resources</directory>
                    </testResource>
                </testResources>
                <plugins>
                    <plugin>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>unpack</id>
                                <phase>process-test-classes</phase>
                                <goals>
                                    <goal>unpack</goal>
                                </goals>
                                <configuration>
                                    <artifactItems>
                                        <artifactItem>
                                            <groupId>org.wildfly</groupId>
                                            <artifactId>wildfly-dist</artifactId>
                                            <version>${version.wildfly10-0}</version>
                                            <type>zip</type>
                                            <overWrite>false</overWrite>
                                            <outputDirectory>${project.build.directory}</outputDirectory>
                                        </artifactItem>
                                    </artifactItems>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.18.1</version>
                        <configuration>
                            <environmentVariables>
                                <JBOSS_HOME>${wildfly10-0Home}</JBOSS_HOME>
                            </environmentVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <testFailureIgnore>false</testFailureIgnore>
                    <systemPropertyVariables>
                        <project.build.directory>${project.build.directory}</project.build.directory>
                        <arquillian.container.wildfly.10.1.0.Final.node0>
                            ${arquillian.container.wildfly.10.1.0.Final.node0}
                        </arquillian.container.wildfly.10.1.0.Final.node0>
                        <arquillian.container.jbossas.10.1.0.Final.jvm.args>
                            ${arquillian.container.jbossas.9.0.1.Final.jvm.args}
                        </arquillian.container.jbossas.10.1.0.Final.jvm.args>
                        <arquillian.container.all.jvm.args>${arquillian.container.all.jvm.args}
                        </arquillian.container.all.jvm.args>
                        <logging.props.dir>${project.basedir}/src/test/resources</logging.props.dir>
                        <project.build.directory>${project.build.directory}</project.build.directory>
                        <eap.ws.enabled>${eap.ws.enabled}</eap.ws.enabled>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-ejb-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <ejbVersion>3.0</ejbVersion>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>